Ana iskelet oluşturuldu.

--- a/TableManagement.API/appsettings.json
+++ b/TableManagement.API/appsettings.json
@@ -5,5 +5,26 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=akademedya;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true;Encrypt=false"
+  },
+  "JwtSettings": {
+    "SecretKey": "dfb-d*-dfb*sdfb-sd*bsd-bd*sfbsdfbsdfb-afb*ab*ba-ba*gasdfa",
+    "ExpireDays": 7
+  },
+  "EmailSettings": {
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpPort": "587",
+    "EnableSsl": "true",
+    "SmtpUserName": "emircanbalta843@gmail.com",
+    "SmtpPassword": "hesmfspqczqstlou",
+    "FromEmail": "emircanbalta843@gmail.com",
+    "FromName": "AKADEMEDYA TABLE MANAGEMENT SYSTEM"
+  },
+  "FrontendSettings": {
+    "BaseUrl": "http://localhost:5173"
+  }
+
+
 }
