--- a/TableManagement.Core/TableManagement.Core.csproj
+++ b/TableManagement.Core/TableManagement.Core.csproj
@@ -8,13 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Azure.Management.Sql" Version="1.53.0-preview" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\" />
-    <Folder Include="Interfaces\" />
-    <Folder Include="Enums\" />
     <Folder Include="DTOs\" />
   </ItemGroup>
 
