--- a/TableManagement.API/appsettings.json
+++ b/TableManagement.API/appsettings.json
@@ -2,7 +2,9 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "TableManagement.Application.Services.AuthService": "Debug",
+      "TableManagement.API.Controllers.AuthController": "Debug"
     }
   },
   "AllowedHosts": "*",
@@ -24,7 +26,8 @@
   },
   "FrontendSettings": {
     "BaseUrl": "http://localhost:5173"
+  },
+  "ApiSettings": {
+    "BaseUrl": "https://localhost:7018"
   }
-
-
 }
