Middleware eklemesi yapıldı test edilecek sonradan geliştirilecek.

--- a/TableManagement.API/appsettings.json
+++ b/TableManagement.API/appsettings.json
@@ -1,4 +1,110 @@
 {
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.MSSqlServer" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "Microsoft.AspNetCore": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log-.txt",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 30,
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Server=.;Database=akademedya;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true;Encrypt=false",
+          "sinkOptionsSection": {
+            "tableName": "SerilogLogs",
+            "schemaName": "dbo",
+            "autoCreateSqlTable": true,
+            "batchPostingLimit": 1000,
+            "period": "0.00:00:30"
+          },
+          "columnOptionsSection": {
+            "disableTriggers": true,
+            "clusteredColumnstoreIndex": false,
+            "primaryKeyColumnName": "Id",
+            "addStandardColumns": [ "LogEvent" ],
+            "removeStandardColumns": [ "MessageTemplate" ],
+            "additionalColumns": [
+              {
+                "ColumnName": "RequestPath",
+                "DataType": "nvarchar",
+                "DataLength": 500,
+                "AllowNull": true
+              },
+              {
+                "ColumnName": "RequestMethod",
+                "DataType": "nvarchar",
+                "DataLength": 10,
+                "AllowNull": true
+              },
+              {
+                "ColumnName": "UserAgent",
+                "DataType": "nvarchar",
+                "DataLength": 1000,
+                "AllowNull": true
+              },
+              {
+                "ColumnName": "IpAddress",
+                "DataType": "nvarchar",
+                "DataLength": 45,
+                "AllowNull": true
+              },
+              {
+                "ColumnName": "UserId",
+                "DataType": "nvarchar",
+                "DataLength": 450,
+                "AllowNull": true
+              },
+              {
+                "ColumnName": "StatusCode",
+                "DataType": "int",
+                "AllowNull": true
+              },
+              {
+                "ColumnName": "ResponseTime",
+                "DataType": "bigint",
+                "AllowNull": true
+              },
+              {
+                "ColumnName": "IsSuspicious",
+                "DataType": "bit",
+                "AllowNull": false
+              },
+              {
+                "ColumnName": "ThreatType",
+                "DataType": "nvarchar",
+                "DataLength": 100,
+                "AllowNull": true
+              }
+            ]
+          }
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId", "WithProcessId" ],
+    "Properties": {
+      "Application": "TableManagement.API"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
