--- a/TableManagement.API/TableManagement.API.csproj
+++ b/TableManagement.API/TableManagement.API.csproj
@@ -16,7 +16,17 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<!-- AutoMapper referansları kaldırıldı - Application katmanından gelecek -->
+		<PackageReference Include="Serilog" Version="3.1.1" />
+		<PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
+		<PackageReference Include="Serilog.Sinks.MSSqlServer" Version="6.3.0" />
+		<PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
+		<PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+		<PackageReference Include="Serilog.Extensions.Hosting" Version="7.0.0" />
+		<PackageReference Include="Serilog.Settings.Configuration" Version="7.0.1" />
+		<PackageReference Include="Serilog.Enrichers.Environment" Version="2.2.0" />
+		<PackageReference Include="Serilog.Enrichers.Process" Version="2.0.2" />
+		<PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
+
 		<PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.18" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.18" />
@@ -33,7 +43,7 @@
 
 	<ItemGroup>
 		<Folder Include="Extensions\" />
-		<Folder Include="Middleware\" />
+		<Folder Include="Logs\" />
 		<Folder Include="wwwroot\Videos\" />
 		<Folder Include="wwwroot\Photos\" />
 	</ItemGroup>
