Giriş yapılabiliyor ve kayıt olunabiliyor.

--- a/TableManagement.API/appsettings.json
+++ b/TableManagement.API/appsettings.json
@@ -1,4 +1,28 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=akademedya;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true;Encrypt=false"
+  },
+  "JwtSettings": {
+    "SecretKey": "dfb-d*-dfb*sdfb-sd*bsd-bd*sfbsdfbsdfb-afb*ab*ba-ba*gasdfa",
+    "ExpireDays": 7,
+    "Issuer": "TableManagementAPI",
+    "Audience": "TableManagementClients"
+  },
+  "EmailSettings": {
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpPort": "587",
+    "EnableSsl": "true",
+    "SmtpUserName": "emircanbalta843@gmail.com",
+    "SmtpPassword": "hesmfspqczqstlou",
+    "FromEmail": "emircanbalta843@gmail.com",
+    "FromName": "AKADEMEDYA TABLE MANAGEMENT SYSTEM"
+  },
+  "FrontendSettings": {
+    "BaseUrl": "http://localhost:5173"
+  },
+  "ApiSettings": {
+    "BaseUrl": "https://localhost:7018"
+  },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.MSSqlServer" ],
     "MinimumLevel": {
@@ -7,7 +31,8 @@
         "Microsoft": "Warning",
         "Microsoft.Hosting.Lifetime": "Information",
         "Microsoft.AspNetCore": "Warning",
-        "System": "Warning"
+        "System": "Warning",
+        "TableManagement.Application.Services.AuthService": "Debug"
       }
     },
     "WriteTo": [
@@ -25,115 +50,7 @@
           "retainedFileCountLimit": 30,
           "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
         }
-      },
-      {
-        "Name": "MSSqlServer",
-        "Args": {
-          "connectionString": "Server=.;Database=akademedya;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true;Encrypt=false",
-          "sinkOptionsSection": {
-            "tableName": "SerilogLogs",
-            "schemaName": "dbo",
-            "autoCreateSqlTable": true,
-            "batchPostingLimit": 1000,
-            "period": "0.00:00:30"
-          },
-          "columnOptionsSection": {
-            "disableTriggers": true,
-            "clusteredColumnstoreIndex": false,
-            "primaryKeyColumnName": "Id",
-            "addStandardColumns": [ "LogEvent" ],
-            "removeStandardColumns": [ "MessageTemplate" ],
-            "additionalColumns": [
-              {
-                "ColumnName": "RequestPath",
-                "DataType": "nvarchar",
-                "DataLength": 500,
-                "AllowNull": true
-              },
-              {
-                "ColumnName": "RequestMethod",
-                "DataType": "nvarchar",
-                "DataLength": 10,
-                "AllowNull": true
-              },
-              {
-                "ColumnName": "UserAgent",
-                "DataType": "nvarchar",
-                "DataLength": 1000,
-                "AllowNull": true
-              },
-              {
-                "ColumnName": "IpAddress",
-                "DataType": "nvarchar",
-                "DataLength": 45,
-                "AllowNull": true
-              },
-              {
-                "ColumnName": "UserId",
-                "DataType": "nvarchar",
-                "DataLength": 450,
-                "AllowNull": true
-              },
-              {
-                "ColumnName": "StatusCode",
-                "DataType": "int",
-                "AllowNull": true
-              },
-              {
-                "ColumnName": "ResponseTime",
-                "DataType": "bigint",
-                "AllowNull": true
-              },
-              {
-                "ColumnName": "IsSuspicious",
-                "DataType": "bit",
-                "AllowNull": false
-              },
-              {
-                "ColumnName": "ThreatType",
-                "DataType": "nvarchar",
-                "DataLength": 100,
-                "AllowNull": true
-              }
-            ]
-          }
-        }
       }
-    ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId", "WithProcessId" ],
-    "Properties": {
-      "Application": "TableManagement.API"
-    }
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "TableManagement.Application.Services.AuthService": "Debug",
-      "TableManagement.API.Controllers.AuthController": "Debug"
-    }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=akademedya;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true;Encrypt=false"
-  },
-  "JwtSettings": {
-    "SecretKey": "dfb-d*-dfb*sdfb-sd*bsd-bd*sfbsdfbsdfb-afb*ab*ba-ba*gasdfa",
-    "ExpireDays": 7
-  },
-  "EmailSettings": {
-    "SmtpHost": "smtp.gmail.com",
-    "SmtpPort": "587",
-    "EnableSsl": "true",
-    "SmtpUserName": "emircanbalta843@gmail.com",
-    "SmtpPassword": "hesmfspqczqstlou",
-    "FromEmail": "emircanbalta843@gmail.com",
-    "FromName": "AKADEMEDYA TABLE MANAGEMENT SYSTEM"
-  },
-  "FrontendSettings": {
-    "BaseUrl": "http://localhost:5173"
-  },
-  "ApiSettings": {
-    "BaseUrl": "https://localhost:7018"
+    ]
   }
 }
