--- a/TableManagement.Application/TableManagement.Application.csproj
+++ b/TableManagement.Application/TableManagement.Application.csproj
@@ -15,6 +15,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.18" />
 		<PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.12.1" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.1" />
+		<PackageReference Include="DevExtreme.AspNet.Data" Version="5.1.0" />
 	</ItemGroup>
 
 	<ItemGroup>
